--- a/index.html
+++ b/index.html
@@ -35,7 +35,23 @@
         <div id="region">
             <p>Turkey</p>
         </div>
-        <div id="company"></div>
+        <div id="company">
+            <div id = "company-first">
+                <ul>
+                    <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">How Search works</a></li>
+                </ul>
+            </div>
+            <div id="company-second">
+                <ul>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Settings</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
